--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/layout/_layout.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/layout/_layout.scss
@@ -1,5 +1,6 @@
 // Set proper width for all generic page components.
 .content-lower,
+.news-content,
 .policymaker-content,
 .policymaker-text,
 .trustee-content {
